# compact-games

./: .gitignore  LICENSE  README.md  SETUP.md  build_installer.bat  flutter_rust_bridge.yaml  init.ps1  jsconfig.json  pubspec.yaml
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  lib.rs  utils.rs
rust/src/api/: automation.rs  automation_types.rs  compression.rs  discovery.rs  icon.rs  minimal.rs  mod.rs  shell.rs  types.rs  unsupported.rs  update.rs
rust/src/api/automation/: mod.rs  worker.rs  worker_broadcast.rs  worker_compression.rs  worker_reconcile.rs
rust/src/automation/: idle.rs  journal.rs  mod.rs  watcher.rs
rust/src/automation/scheduler/: mod.rs  tests.rs  types.rs
rust/src/automation/watcher/: coalescer.rs  mod.rs  tests.rs
rust/src/compression/: algorithm.rs  community_db.rs  engine.rs  error.rs  mod.rs  tests.rs  thread_policy.rs  wof.rs
rust/src/compression/engine/: engine_safety.rs  estimation.rs  estimation_runtime.rs  operation_session.rs  path_guard.rs  unit_tests.rs  wof_ops.rs
rust/src/compression/history/: adaptive.rs  mod.rs  (+1 more)
rust/src/discovery/: battlenet.rs  cache.rs  change_feed.rs  custom.rs  ea.rs  epic.rs  gog.rs  hidden_paths.rs  index.rs  install_history.rs  mod.rs  platform.rs  scan_error.rs  steam.rs  storage.rs  test_sync.rs  ubisoft.rs  utils.rs  xbox.rs
rust/src/net/: github_release_fetcher.rs  mod.rs
rust/src/progress/: mod.rs  reporter.rs  tracker.rs
rust/src/safety/: directstorage.rs  known_directstorage_games.json  known_games.rs  known_unsupported_games.json  mod.rs  process.rs  unsupported_games.rs
(+255 files in other folders)
